--- a/walker.css
+++ b/walker.css
@@ -1,6 +1,28 @@
-@define-color selected-text #614f76;
-@define-color text #ffe9c7;
-@define-color base #181515;
-@define-color border #725a5a;
-@define-color foreground #ffe9c7;
-@define-color background #181515;
+/*
+*
+*
+*
+* ██████╗ ██╗███████╗ ██████╗██╗   ██╗██╗████████╗
+* ██╔══██╗██║██╔════╝██╔════╝██║   ██║██║╚══██╔══╝
+* ██████╔╝██║███████╗██║     ██║   ██║██║   ██║
+* ██╔══██╗██║╚════██║██║     ██║   ██║██║   ██║
+* ██████╔╝██║███████║╚██████╗╚██████╔╝██║   ██║
+* ╚═════╝ ╚═╝╚══════╝ ╚═════╝ ╚═════╝ ╚═╝   ╚═╝
+*                          .-.
+*         .'            .;|/:
+*    .-..'  .-.        .;   : .-.     .;.::.
+*   :   ; .;.-'       .;    :;   :    .;
+*   `:::'`.`:::'  .:'.;     :`:::'-'.;'
+*                (__.'      `.             ɖǟʀӄ
+*                                                 
+*
+*/
+
+@import url("./colors.css");
+
+@define-color selected-text @base09;
+@define-color text @base0D;
+@define-color base @base00;
+@define-color border @base03;
+@define-color foreground @base05;
+@define-color background @base00;
