--- a/wofi.css
+++ b/wofi.css
@@ -1,11 +1,33 @@
-@define-color bg #181515;
-@define-color fg #ffe9c7;
-@define-color gray1 #768f80;
-@define-color gray2 #725a5a;
-@define-color gray3 #614f76;
-@define-color gray4 #959a6b;
-@define-color gray5 #7b3d79;
-@define-color fg_bright #ffe9c7;
+/*
+*
+*
+*
+* ██████╗ ██╗███████╗ ██████╗██╗   ██╗██╗████████╗
+* ██╔══██╗██║██╔════╝██╔════╝██║   ██║██║╚══██╔══╝
+* ██████╔╝██║███████╗██║     ██║   ██║██║   ██║
+* ██╔══██╗██║╚════██║██║     ██║   ██║██║   ██║
+* ██████╔╝██║███████║╚██████╗╚██████╔╝██║   ██║
+* ╚═════╝ ╚═╝╚══════╝ ╚═════╝ ╚═════╝ ╚═╝   ╚═╝
+*                          .-.
+*         .'            .;|/:
+*    .-..'  .-.        .;   : .-.     .;.::.
+*   :   ; .;.-'       .;    :;   :    .;
+*   `:::'`.`:::'  .:'.;     :`:::'-'.;'
+*                (__.'      `.             ɖǟʀӄ
+*                                                 
+*
+*/
+
+@import url("./colors.css");
+
+@define-color bg @base00;
+@define-color fg @base05;
+@define-color gray1 @base0B;
+@define-color gray2 @base03;
+@define-color gray3 @base0D;
+@define-color gray4 @base0A;
+@define-color gray5 @base0E;
+@define-color fg_bright @base05;
 
 window {
     background-color: @bg;
