--- a/colors.css
+++ b/colors.css
@@ -44,3 +44,19 @@
 @define-color base0D #614F76; /* ACTIVE (shared): primary selection/focus accent in GTK + Wofi + Walker + Aether */
 @define-color base0E #7B3D79; /* ACTIVE (shared): secondary accent in Wofi + Aether (+ Vencord mapping) */
 @define-color base0F #AE3F82; /* ACTIVE (shared): brand accent in Waybar (+ Vencord mapping) */
+
+/* ______   __       ______
+* /_____/\ /_/\     /_____/\                                      
+* \:::_ \ \\:\ \    \:::_ \ \                                     
+*  \:\ \ \ \\:\ \    \:\ \ \ \                                    
+*   \:\ \ \ \\:\ \____\:\ \ \ \                                   
+*    \:\_\ \ \\:\/___/\\:\/.:| |                                  
+*  ___\_____\/_\_____\/ \____/_/  ______    _______   ______      
+* /________/\/_____/\ /_______/\ /_____/\ /_______/\ /_____/\     
+* \__.::.__\/\:::_ \ \\::: _  \ \\:::_ \ \\::: _  \ \\:::_ \ \    
+*   /_\::\ \  \:\ \ \ \\::(_)  \/_\:\ \ \ \\::(_)  \/_\:\ \ \ \   
+*   \:.\::\ \  \:\ \ \ \\::  _  \ \\:\ \ \ \\::  _  \ \\:\ \ \ \  
+*    \: \  \ \  \:\_\ \ \\::(_)  \ \\:\_\ \ \\::(_)  \ \\:\_\ \ \ 
+*     \_____\/   \_____\/ \_______\/ \_____\/ \_______\/ \_____\/ 
+*
+*/
