--- a/swayosd.css
+++ b/swayosd.css
@@ -25,3 +25,19 @@
 @define-color label @base0E;
 @define-color image @base0E;
 @define-color progress @base0A;
+
+/* ______   __       ______
+* /_____/\ /_/\     /_____/\                                      
+* \:::_ \ \\:\ \    \:::_ \ \                                     
+*  \:\ \ \ \\:\ \    \:\ \ \ \                                    
+*   \:\ \ \ \\:\ \____\:\ \ \ \                                   
+*    \:\_\ \ \\:\/___/\\:\/.:| |                                  
+*  ___\_____\/_\_____\/ \____/_/  ______    _______   ______      
+* /________/\/_____/\ /_______/\ /_____/\ /_______/\ /_____/\     
+* \__.::.__\/\:::_ \ \\::: _  \ \\:::_ \ \\::: _  \ \\:::_ \ \    
+*   /_\::\ \  \:\ \ \ \\::(_)  \/_\:\ \ \ \\::(_)  \/_\:\ \ \ \   
+*   \:.\::\ \  \:\ \ \ \\::  _  \ \\:\ \ \ \\::  _  \ \\:\ \ \ \  
+*    \: \  \ \  \:\_\ \ \\::(_)  \ \\:\_\ \ \\::(_)  \ \\:\_\ \ \ 
+*     \_____\/   \_____\/ \_______\/ \_____\/ \_______\/ \_____\/ 
+*
+*/
