--- a/waybar.css
+++ b/waybar.css
@@ -23,3 +23,19 @@
 @define-color background alpha(@base00, 0.8);
 @define-color foreground @base05;
 @define-color accent @base0F;
+
+/* ______   __       ______
+* /_____/\ /_/\     /_____/\                                      
+* \:::_ \ \\:\ \    \:::_ \ \                                     
+*  \:\ \ \ \\:\ \    \:\ \ \ \                                    
+*   \:\ \ \ \\:\ \____\:\ \ \ \                                   
+*    \:\_\ \ \\:\/___/\\:\/.:| |                                  
+*  ___\_____\/_\_____\/ \____/_/  ______    _______   ______      
+* /________/\/_____/\ /_______/\ /_____/\ /_______/\ /_____/\     
+* \__.::.__\/\:::_ \ \\::: _  \ \\:::_ \ \\::: _  \ \\:::_ \ \    
+*   /_\::\ \  \:\ \ \ \\::(_)  \/_\:\ \ \ \\::(_)  \/_\:\ \ \ \   
+*   \:.\::\ \  \:\ \ \ \\::  _  \ \\:\ \ \ \\::  _  \ \\:\ \ \ \  
+*    \: \  \ \  \:\_\ \ \\::(_)  \ \\:\_\ \ \\::(_)  \ \\:\_\ \ \ 
+*     \_____\/   \_____\/ \_______\/ \_____\/ \_______\/ \_____\/ 
+*
+*/
