--- a/wofi.css
+++ b/wofi.css
@@ -69,3 +69,19 @@ scrollbar slider {
 scrollbar slider:hover {
     background-color: @gray3;
 }
+
+/* ______   __       ______
+* /_____/\ /_/\     /_____/\                                      
+* \:::_ \ \\:\ \    \:::_ \ \                                     
+*  \:\ \ \ \\:\ \    \:\ \ \ \                                    
+*   \:\ \ \ \\:\ \____\:\ \ \ \                                   
+*    \:\_\ \ \\:\/___/\\:\/.:| |                                  
+*  ___\_____\/_\_____\/ \____/_/  ______    _______   ______      
+* /________/\/_____/\ /_______/\ /_____/\ /_______/\ /_____/\     
+* \__.::.__\/\:::_ \ \\::: _  \ \\:::_ \ \\::: _  \ \\:::_ \ \    
+*   /_\::\ \  \:\ \ \ \\::(_)  \/_\:\ \ \ \\::(_)  \/_\:\ \ \ \   
+*   \:.\::\ \  \:\ \ \ \\::  _  \ \\:\ \ \ \\::  _  \ \\:\ \ \ \  
+*    \: \  \ \  \:\_\ \ \\::(_)  \ \\:\_\ \ \\::(_)  \ \\:\_\ \ \ 
+*     \_____\/   \_____\/ \_______\/ \_____\/ \_______\/ \_____\/ 
+*
+*/
